mengubah dookumentasi menjadi dokumentasi

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>Saya lahir pada tanggal 09 juni 2008 di Sukabumi Jawa Barat. SD saya di SDITECH PASIM ARRAYYAN dan SMP saya di SMPIT HAYATAN THAYYIBAH</p>
           </div>
           <div class="col-md-4">
-            <p>Sekarang saya di SMA PT HAYATAN THAYYIBAH sedang mengerjakan banyak proyek seperti membuat portfolio ini dan juga nanti saya akan menjadi tim dookumentasi dari LARGALANG</p>
+            <p>Sekarang saya di SMA PT HAYATAN THAYYIBAH sedang mengerjakan banyak proyek seperti membuat portfolio ini dan juga nanti saya akan menjadi tim dokumentasi dari LARGALANG</p>
           </div>
         </div>
       </div>
